# TPAutoCorrect

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pytests.py  setup.py
Example/SimpleTP/: .gitignore  auto_correct.py  requirements.txt
Example/SimpleTP/master_tests/: test_a_class.py  test_functions.py
Example/SimpleTP/src/: a_class.py  functions.py
Example/SimpleTP/temp/src/: functions.py
Example/SimpleTP/tests/: test_a_class.py  test_functions.py
sphinx/: generate_doc.py
sphinx/source/: conf.py  index.rst  modules.rst
src/tac/: __init__.py  __main__.py  perf_test_case.py  report.py  source.py  tester.py  utils.py
src/tp_auto_correct/: __init__.py  source.py  tester.py  utils.py
