[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
addopts = [
    "--cov=src",
    "--durations=10",
]


[build-system]
requires = [
  "setuptools",
  "wheel",
  "pythonbasictools",
  "numpy",
  "matplotlib",
]
build-backend = "setuptools.build_meta"



[project]
name = "TAC"
dynamic = ["version", "readme", "urls"]
description = ""
authors = [
  { name="Jérémie Gince", email="gincejeremie@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.3",
    "setuptools>=57.0.0",
    "pytest>=7.1.2",
    "pytest-cov>=4.1.0",
    "pytest_json_report>=1.5.0",
    "pycodestyle>=2.11.1",
    "GitPython>=3.1.40",
    "pythonbasictools>=0.0.1a10",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
